--- a/templates/error.html
+++ b/templates/error.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Thank you</title>
+    <title>Error</title>
 </head>
 <body>
-Thank you for your answer, you are number 42 in the queue.
+{{error}}
 </body>
 </html>
